--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sistema de gestão e apoio aos militantes da JMPLA. "
+      content="Sistema de gestão e apoio aos militantes do MPLA. "
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/asset/img/mpla.jpg" />
-    <title>JMPLA :: Camama</title>
+    <title>MPLA :: Camama</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
   <body>
